--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@ a { -webkit-tap-highlight-color: transparent; }
 a:hover,
 a:focus { outline: none; }
 
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 .container {
   display: flex;
   width: 100%;
