--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Roboto:wght@400;500&display=swap");
 
 :root {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
@@ -62,9 +62,9 @@ a:hover,
 a:focus { outline: none; }
 
 button {
+  cursor: pointer;
   background: none;
   border: none;
-  cursor: pointer;
 }
 
 .ripple {
